<resources>
    <string name="app_name">OrganizzeCloneFirebase</string>
    <string name="description_main_screen">Crie uma conta grátis</string>
    <string name="description_main_screen_2">Junte a milhoes de Pessoas</string>
    <string name="register_main_login_button">Cadastrar</string>
    <string name="description_main_screen_3">Já tenho uma Conta.</string>
    <string name="expense_name">Despesas</string>
    <string name="income_name">Receitas</string>
    <string name="category_name">Categoria</string>
    <string name="description_name">Descrição</string>
    <string name="date_name">Data ex: 22/01/2021</string>
    <string name="format_number">R$ 0,00</string>
</resources>